// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert alert renders correctly (default): alert-default 1`] = `
<div
  className="alert alert_undefined"
  onClick={[Function]}
>
  <i
    className="ts_icon ts_icon_slack_pillow"
  />
  Hello
</div>
`;

exports[`Alert alert renders correctly (error): alert-error 1`] = `
<div
  className="alert alert_error"
  onClick={[Function]}
>
  <i
    className="ts_icon ts_icon_warning"
  />
  Hello
</div>
`;

exports[`Alert alert renders correctly (info): alert-info 1`] = `
<div
  className="alert alert_info"
  onClick={[Function]}
>
  <i
    className="ts_icon ts_icon_info_circle"
  />
  Hello
</div>
`;

exports[`Alert alert renders correctly (success): alert-success 1`] = `
<div
  className="alert alert_success"
  onClick={[Function]}
>
  <i
    className="ts_icon ts_icon_check_circle_o"
  />
  Hello
</div>
`;

exports[`Alert alert renders correctly (warning): alert-warning 1`] = `
<div
  className="alert alert_warning"
  onClick={[Function]}
>
  <i
    className="ts_icon ts_icon_warning"
  />
  Hello
</div>
`;
